--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://titorefat76:eSYgVUY4qLKDcE9s@cluster0.3cypc.mongodb.net/ecommerce_db?retryWrites=true&w=majority&appName=Cluster0
+UPSTASH_REDIS_URL=rediss://default:AdzGAAIjcDFhYThkM2I2MWYzM2Q0NTEwOWQxZTdlOGRjMWY1OTljMXAxMA@alive-oryx-56518.upstash.io:6379
+ACCESS_TOKEN_SECRET =refat/secret
+REFRESH_TOKEN_SECRET =refat/secret
+CLOUDINARY_CLOUD_NAME =dshm31vtk
+CLOUDINARY_API_KEY = 925725841675315
+CLOUDINARY_API_SECRET=gRBL3p5tE6iQRQFN_CThRm7xKL4
